[tool.poetry]
name = "nalogapi"
version = "0.1.0"
description = "Unofficial synchronous wrapper for lknpd.nalog.ru API written in Python"
authors = ["Mike Ovchinnikov <mixao@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
